--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="http://api.map.baidu.com/api?v=3.0&ak=Aop4IAFIZfTwAPWkajmAPDU07WIWuwqk"></script> -->
   </body>
 </html>
